# cpp_modules_sample

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  dog.cpp  interface.cpp  pet.cpp
